# do

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2024-10-27-223115_create_tables/: down.sql  up.sql
migrations/2024-11-04-033215_add_unique_constraints_to_tasks_and_subtasks/: down.sql  up.sql
src/: main.rs
src/cli/: add.rs  handler.rs  mod.rs  types.rs
src/db/: errors.rs  mod.rs  models.rs  operations.rs  schema.rs
src/service/: errors.rs  mod.rs  svc.rs
