[package]
name = "doit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
diesel_migrations = "2.2.0"
